prevent debug button from wrapping

--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -71,6 +71,10 @@
   }
 
   // debug buttons
+  .btn-group {
+    min-width: 153px; // stop wrapping
+  }
+
   .btn-xs.purple {
     background: $purple-light;
     border: 0;
